sample/msvc/error/c2054.cpp
// C2054.c
int array1[] { 1, 2, 3 };   // C2054, missing =
